force-app/main/default/objects/Deposit_Statistics__c/Deposit_Statistics__c.object-meta.xml
<CustomObject>
    <label>Deposit Statistics</label>
    <nameField>
        <displayFormat>DSN-{0000}</displayFormat>
        <label>Deposit Statistics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deposit Statistics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>