force-app/main/default/objects/Deposit_Statistics__c/fields/Date_Creation__c.field-meta.xml
<CustomField>
    <fullName>Date_Creation__c</fullName>
    <label>Period</label>
    <type>Date</type>
</CustomField>