force-app/main/default/objects/Deposit_Statistics__c/fields/Expense_Total__c.field-meta.xml
<CustomField>
    <fullName>Expense_Total__c</fullName>
    <label>Expense Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>