force-app/main/default/objects/Deposit_Statistics__c/fields/Invoice_Actual_Income__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Actual_Income__c</fullName>
    <label>Invoice Actual Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>