force-app/main/default/objects/Deposit_Statistics__c/fields/Timecard_Total__c.field-meta.xml
<CustomField>
    <fullName>Timecard_Total__c</fullName>
    <label>Timecard Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>